--- a/assets/css/articles.scss
+++ b/assets/css/articles.scss
@@ -260,6 +260,33 @@ $article-card-hover-brightness: 30%;
 			display: -webkit-box;
 			-webkit-line-clamp: 3; /* Adjust based on line height */
 			-webkit-box-orient: vertical;
+			text-align: left;
+			// padding-left: 10px;
+			padding-left: 5%;
+			padding-right: 5%;
+			text-wrap: wrap;
+		}
+
+		.empty-description{
+			display: flex;
+			justify-content: center; /* horizontal center */
+			align-items: center;     /* vertical center */
+			span{
+				// background-color:white; 
+				background-color:var(--hover-color); 
+				color:black; 
+				padding:5px 10px; 
+				font-weight: 900;
+				// box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+				// box-shadow: rgba(0, 0, 0, 0.95) 0px 5px 15px;
+				// box-shadow: rgba(0, 0, 0, 0.95) 0px 5px 15px;
+				box-shadow: rgba(0, 0, 0, 0.95) 0px 5px 5px;
+				border-radius: 4px;
+				// box-shadow: rgba(50, 50, 93, 0.95) 0px 50px 100px -20px, rgba(0, 0, 0, 0.93) 0px 30px 60px -30px, rgba(10, 37, 64, 0.95) 0px -2px 6px 0px inset;
+			}
+			// margin:auto;
+			// text-align: center;
+			// display: inline-block;
 		}
 
 
