text-align-center

--- a/assets/css/utility-classes.scss
+++ b/assets/css/utility-classes.scss
@@ -71,6 +71,10 @@
 	text-align: left;
 }
 
+.text-align-center{
+	text-align: center;
+}
+
 .hover-border-bloom:hover{
 	// @include custom-box-shadow(2px, 2px, 10px, 0px, var(--hover-color));
 	@include custom-box-shadow(0px, 0px, 8px, 3px, var(--hover-color));
