--- a/layouts/partials/next-and-previous-article.html
+++ b/layouts/partials/next-and-previous-article.html
@@ -1,17 +1,24 @@
-{{ $previous_article := .PrevInSection}}
-{{ $next_article := .NextInSection}}
+{{- /*  This retrieves private pages (and private pages should not appear there)  */ -}}
+{{- /*  {{ $previous_article := .PrevInSection}}
+{{ $next_article := .NextInSection}}  */ -}}
 
-{{ with $previous_article }}
-<a class="previous-article hover-accent-color" href="{{.RelPermalink}}" title="{{ .Title }}">
+{{- /*  Fix:  */ -}}
+{{- /*  https://discourse.gohugo.io/t/exclude-pages-by-type-from-nextinsection/23259/2  */ -}}
+{{- $public_articles := where (where .Site.RegularPages ".Section" "eq" "articles") ".Params.private" "ne" true -}}
+{{- $previous_article := $public_articles.Prev . -}}
+{{- $next_article := $public_articles.Next . -}}
+
+{{- with $previous_article -}}
+<a class="previous-article hover-accent-color" href="{{- .RelPermalink -}}" title="{{- .Title -}}">
 	<svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="currentColor"><path d="M400-80 0-480l400-400 71 71-329 329 329 329-71 71Z"/></svg>
 	{{/*  <span>{{ .Title }}</span>  */}}
 </a>
-{{ end }}
+{{- end -}}
 
-{{ with $next_article }}
-<a class="next-article hover-accent-color" href="{{.RelPermalink}}" title="{{ .Title }}">
+{{- with $next_article -}}
+<a class="next-article hover-accent-color" href="{{- .RelPermalink -}}" title="{{- .Title -}}">
 	{{/*  <span>{{ .Title }}</span>  */}}
 	<svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="currentColor"><path d="m321-80-71-71 329-329-329-329 71-71 400 400L321-80Z"/></svg>
 </a>
-{{ end }}
+{{- end -}}
 
