featured-articles-container width (90%)

--- a/assets/css/articles.scss
+++ b/assets/css/articles.scss
@@ -406,6 +406,7 @@ $article-card-hover-brightness: 30%;
 
 hgroup.featured-articles-container{
 	max-width: 1920px;
+	width: 90%;
 }
 
 .featured-articles-container{
