--- a/assets/css/albums.scss
+++ b/assets/css/albums.scss
@@ -1,5 +1,41 @@
 
+
+section.galleries {
+	// display: grid;
+	// grid-template-columns: repeat(1, minmax(0, 1fr));
+	// gap: 2rem 1.5rem;
+	// max-width: 1280px;
+  
+	// @media (min-width: 640px) {
+	//   grid-template-columns: repeat(2, minmax(0, 1fr));
+	//   row-gap: 3rem;
+	// }
+  
+	// @media (min-width: 1024px) {
+	//   grid-template-columns: repeat(3, minmax(0, 1fr));
+	// }
+  
+	display: flex;
+	gap: 1em;
+	// align-items: center;
+	// align-content: center;
+	justify-content: center;
+	align-content: stretch;
+	flex-wrap: wrap;
+	// background-color: red;
+  }
+
 .card{
+	// flex: 0 0 200px;
+	// flex: 0 0 clamp(200px, 400px, 90vmin);
+	// flex: 0 0 clamp(200px, 400px, 20vw);
+	// flex: 0 0 clamp(200px, 400px, 600px);
+	// flex: 0 0 clamp(200px, 20%, 600px);
+	// flex: 0 0 clamp(400px, 20%, 600px);
+	// flex: 0 0 clamp(400px, 90%, 600px);
+	// flex: 0 0 clamp(300px, 90%, 410px);
+	flex: 0 0 clamp(300px, 90%, 400px);
+	// flex: 0 0 clamp(95vmin, 400px, 90vmin);
 	transition: all 1200ms;
 
 	// & figure img{
