list-style: none; for categories

--- a/assets/css/albums.scss
+++ b/assets/css/albums.scss
@@ -111,6 +111,12 @@ section.galleries {
 
 }
 
+nav.categories{
+	li{
+		list-style: none;
+	}
+}
+
 .dark .card figure{
 	transition-duration: .7s;
 }
