article_tags SHORTCODE

--- a/assets/css/utility-classes.scss
+++ b/assets/css/utility-classes.scss
@@ -80,3 +80,8 @@
 	@include custom-box-shadow(0px, 0px, 8px, 3px, var(--hover-color));
 	// border: ;
 }
+
+.list-style-none{
+	list-style: none;
+}
+
