--- a/layouts/partials/album-card.html
+++ b/layouts/partials/album-card.html
@@ -3,6 +3,9 @@
   <a class="card" href="{{- .page.RelPermalink -}}" title="{{- .page.Title -}}">
     <figure style="background-color: {{- .color -}}">
       <img class="lazyload" width="{{- .thumbnail.Width -}}" height="{{- .thumbnail.Height -}}" data-src="{{- .thumbnail.RelPermalink -}}" alt="{{- .page.Title -}}" />
+      {{- if .thumbnail_hover -}}
+        <img class="lazyload hover-cover-image" width="{{- .thumbnail_hover.Width -}}" height="{{- .thumbnail_hover.Height -}}" data-src="{{- .thumbnail_hover.RelPermalink -}}" alt="{{- .page.Title -}}" />
+      {{- end -}}
     </figure>
     <div>
       <h2>{{- .page.Title -}}</h2>
