show album categories in title.html

--- a/layouts/partials/title.html
+++ b/layouts/partials/title.html
@@ -6,5 +6,6 @@
     {{ with .Params.Description }}
       <p>{{ . | markdownify }}</p>
     {{ end }}
+    {{ partial "albums/album-categories.html" . }}
   </hgroup>
 {{ end }}
