category-tag style

--- a/assets/css/albums.scss
+++ b/assets/css/albums.scss
@@ -127,9 +127,24 @@ section.galleries {
 }
 
 nav.categories{
+	gap: 0px;
+	ul{
+		gap: 0px;
+		li{
+			margin-left: 5px;
+		}
+	}
 	li{
 		list-style: none;
 	}
+}
+
+.category-tag{
+	@extend .article-tag;
+	color: var(--text-2);
+	// font-weight: 600;
+	font-weight: bold;
+	list-style: none;
 }
 
 .dark .card figure{
