previous-article and next-article changed to softer colors

--- a/assets/css/custom.scss
+++ b/assets/css/custom.scss
@@ -2026,6 +2026,7 @@ hgroup.articles-content ul ul ul ul li{
 	left: 0;
 	padding-left: 10px;
 	padding-top: 10px;
+	color: var(--text-2);
 }
 
 .next-article{
@@ -2033,6 +2034,7 @@ hgroup.articles-content ul ul ul ul li{
 	right: 0;
 	padding-right: 10px;
 	padding-top: 10px;
+	color: var(--text-2);
 }
 
 #header-buttons-container{
