refactor next and previous-page-arrow

--- a/assets/css/custom.scss
+++ b/assets/css/custom.scss
@@ -2021,7 +2021,7 @@ hgroup.articles-content ul ul ul ul li{
 }
 /*#endregion hgroup.articles-content*/
 
-.previous-article{
+.previous-page-arrow{
 	position: absolute;
 	left: 0;
 	padding-left: 10px;
@@ -2029,7 +2029,7 @@ hgroup.articles-content ul ul ul ul li{
 	color: var(--text-2);
 }
 
-.next-article{
+.next-page-arrow{
 	position: absolute;
 	right: 0;
 	padding-right: 10px;
