--- a/assets/css/utility-classes.scss
+++ b/assets/css/utility-classes.scss
@@ -75,6 +75,15 @@
 	text-align: center;
 }
 
+.text-align-center{
+	width: fit-content; /* optional, for tight content */
+	p, h1, h2, h3, h4, h5, h6 {
+		text-align: center !important;
+		margin: 0 auto;
+		display: inline-block;
+	}
+}
+
 .hover-border-bloom:hover{
 	// @include custom-box-shadow(2px, 2px, 10px, 0px, var(--hover-color));
 	@include custom-box-shadow(0px, 0px, 8px, 3px, var(--hover-color));
