--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -9,6 +9,7 @@
         {{ partial "debug" . }}
       {{ end }}
       {{ block "main" . }}{{ end }}
+      {{ partial "scroll-to-top-button.html" . }}
     </main>
     {{ block "footer" . }}{{ partialCached "footer.html" . }}{{ end }}
   </body>
