galery-title padding

--- a/assets/css/albums.scss
+++ b/assets/css/albums.scss
@@ -1,7 +1,7 @@
 
 hgroup.galery-title{
 	margin-bottom: 1em;
-	// padding-bottom: 1em;
+	padding-bottom: 1em;
 	p a{
 		// font-weight: bold;
 		color: var(--hover-color);
