comment for showing an albums section images

--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -17,4 +17,8 @@
     {{ partial "albums/album-markdown-content.html" . }}
   {{ end }}
   </section>
+
+  {{- /*  To display the images inside the section  */ -}}
+  {{- /*  {{ partial "gallery.html" . }}  */ -}}
+
 {{ end }}
