text-indent: 0px for spans

--- a/assets/css/shortcodes.scss
+++ b/assets/css/shortcodes.scss
@@ -7,6 +7,10 @@
 @import "shortcodes/text_boxes.scss";
 // @import "shortcodes/misc_effects.scss";
 
+span{
+	text-indent: 0px;
+}
+
 // {{/*  REFACTOR rotate  */}}
 
 
